<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actividad_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="domain.bryan.tres_enraya.inicio">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:text="@string/titulo"
                android:textColor="@color/blanco"
                android:textSize="50dp" />

            <RadioGroup
                android:id="@+id/grupoRadio"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top|right|start">

                <RadioButton
                    android:id="@+id/rbOscuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blanco"
                    android:text="@string/oscuro" />

                <RadioButton
                    android:id="@+id/rbClaro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blanco"
                    android:checked="true"
                    android:text="@string/luz" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_O"
                android:layout_width="135dp"
                android:layout_height="135dp"
                app:srcCompat="@mipmap/circulo" />

            <EditText
                android:id="@+id/nombre_O"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:maxLength="6"
                android:text="@string/nombre_O"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_X"
                android:layout_width="135dp"
                android:layout_height="135dp"
                app:srcCompat="@mipmap/cruz" />

            <EditText
                android:id="@+id/nombre_X"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:maxLength="6"
                android:text="@string/nombre_X"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnUnJugador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/blanco"
                android:text="@string/btnUnJugador"
                android:textColor="@color/negro" />

            <Button
                android:id="@+id/btnDosJugadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:text="@string/btnDosJugadores"
                android:textColor="@color/negro" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
