<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/actividad_historial"
    tools:context="domain.bryan.tres_enraya.historial">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:layout_weight="1.52"
                android:textAlignment="center"
                android:text="@string/fecha" />

            <TextView
                android:id="@+id/textView2"
                android:textColor="@color/blanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:text="@string/pieza" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:textColor="@color/blanco"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:weightSum="1">

            <ListView
                android:id="@+id/listaHistorial"
                android:layout_width="match_parent"
                android:layout_height="462dp" />

            <Button
                android:id="@+id/btnlimpiar_historial"
                android:layout_width="match_parent"
                android:background="@color/blanco"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpiar_historial" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
