<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/juego"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="domain.bryan.tres_enraya.Juego"

    >

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="576dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/JuegoNombre_O"
                android:textSize="30dp"
                android:textColor="@color/blanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@mipmap/circulo"/>

            <TextView
                android:id="@+id/puntos_O"
                android:layout_width="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/blanco"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/puntos_O" />
            <TextView
                android:id="@+id/separador"
                android:textSize="30dp"
                android:textColor="@color/blanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <TextView
                android:id="@+id/JuegoNombre_X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="@color/blanco"
                android:textAlignment="center"
                android:textSize="30dp" />
            <ImageView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/cruz"/>

            <TextView
                android:id="@+id/puntos_X"
                android:layout_width="wrap_content"
                android:textColor="@color/blanco"
                android:textSize="30dp"
                android:layout_height="wrap_content"
                android:text="@string/puntos_X" />

        </LinearLayout>

        <TextView
            android:id="@+id/turno"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/blanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <GridLayout
            android:id="@+id/tablero"
            android:layout_width="match_parent"
            android:layout_height="443dp"
            android:columnCount="3"
            android:rowCount="3">

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@color/blanco"
                android:text="@string/volver"
                android:textColor="@color/negro" />

            <Button
                android:id="@+id/btnJugarOtravez"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@color/blanco"
                android:text="@string/jugar_otra_vex"
                android:textColor="@color/negro" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1.5dp"
                android:layout_weight="1"
                android:background="@color/blanco"
                android:text="@string/salir"
                android:textColor="@color/negro" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
